# WebAgents

./: README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  chat_agent.py  matching_agent.py  pricing_agent.py  recommendation_agent.py  review_agent.py  scheduling_agent.py
backend/app/api/: admin.py  auth.py  bookings.py  chat.py  customers.py  disputes.py  notifications.py  payments.py  providers.py  reviews.py  search.py
backend/app/core/: config.py  exceptions.py  redis_client.py
backend/app/core/agent_communication/: __init__.py  hub.py
backend/app/core/parallel/: __init__.py  executor.py
backend/app/core/prompt_cache/: __init__.py  cache.py
backend/app/core/retry/: __init__.py  retry.py
backend/app/core/security/: __init__.py  dependencies.py  jwt.py  password.py  permissions.py
backend/app/db/: client.py  models.py
backend/app/domain/: __init__.py  models.py
backend/app/services/: matching.py  payment.py  pricing.py  recommendations.py  scheduling.py
backend/app/utils/: distance.py  geolocation.py  notifications.py  validators.py
backend/scripts/: seed_data.py  setup_database.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/frontend/: package.json
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
(+72 files in other folders)
