[project]
name = "karigar-backend"
version = "0.1.0"
description = "Karigar - Hyperlocal Services Marketplace Backend"
authors = [
    {name = "Karigar Team"}
]
requires-python = ">=3.11"
dependencies = []

[tool.poetry]
name = "karigar-backend"
version = "0.1.0"
description = "Karigar - Hyperlocal Services Marketplace Backend"
authors = ["Karigar Team"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"

